test/pass/func.rill
def f(): i32 {
   32
}

def main(): unit {}
