test/fail_compilation/same_name_parameters.rill
def main() {
}

def f(a: int32, a: int32) {}